--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -683,12 +683,7 @@ One of the outcomes of my research was to extract some of the concepts and pract
 | Input Event |   | Reusing and Remixing      |
 
 
-
-BE CLEAR ON PURPOSE OF THE RESOURCES
-
-This process of mapping this framework, while time-consuming, is potentially of use for teachers and other researchers to help their observation of students in game making activities. To further aid practioners, in P5 I restructured paper and online resources on game design patterns to included links to to online descriptions of the concepts in the learning dimensions map.
-
-The following boxed section outlines a desinged mission card which
+This process of mapping this framework is potentially of use for teachers and other researchers to help their observation of students in game making activities to align with design, coding and computational concepts. To further aid practitioners, in P5 I restructured paper and online resources on game design patterns to included links to online descriptions of the concepts in the learning dimensions map. The following boxed section outlines a designed mission card which identifies the more abstract concepts embedded in the more concrete design missions.
 
 BOX BEGINS
 
@@ -729,34 +724,19 @@ _Map of Learning Dimensions of the 3M Game Making Approach_
 
 #### Observations on tensions which the learning and navigational maps have potential to address.
 
-While this element of the learning design is beyond the main remit of this study, as explored below, the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following table aims to summarise the alignment of the potential of this work with other research.
+
+My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following table aims to summarise the alignment of the potential of this work with other research.
 
 
 | **Tension identified**| **Commentary**|
 |----------------|------------------|
-|Teacher stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.  | Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators|
+|Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.  | Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators|
 |  Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.  |   |
 |  Challenges adapting resources to a curriculum environment |  There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. |   
 |Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|   
 
+While the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners. Ultimately, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts.
 
-#### Resolving the conflict in an informal setting by ignoring it
-
-My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment. Ultimately, despite developing resources, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities.
-
-In retrospect, this decision is appropriate to the informal context of this environment and reflects the lack of external motivation to align to curricular concepts.
-
-<!-- has been is helpful to provide a clearer the focus of this study on the possibilities of informal spaces. - >
-<!-- I also de-prioritised learning maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, -->
-<!-- and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods) -->
-
-This reflection was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
-
-The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates.
-
-DEVELOP THIS
-
-Thus arguably my attempts resolve this conflict and making this design more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in more detail in the next two chapters.
 
 <!-- NOTE EXPAND IF USEFUL -->
 
@@ -787,6 +767,7 @@ While tensions between lack of knowledge in how to undertake activities are comm
 One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
 
 While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools.
+CLARIFY AND AND SIGNPOST TO WHY NOT SCRATCH 
 
 My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
 
@@ -1006,7 +987,7 @@ While the simple changes to the game dynamics and patterns embedded in the start
 
 This point marks the pivot to the create _phase_ on the UMC model. Thus the shift from P1 to P2 involved a much more careful and structured experience for participants in U and M stages.
 
-While I do not have comparative video and interview evidence between P1 and P2, journal notes of observations of engagement support this interpretation and alignment with existing research. Broad, uncontroversial claims can be made. For example, new participants in P2 all maintained a working game thus able to share during each session. 
+While I do not have comparative video and interview evidence between P1 and P2, journal notes of observations of engagement support this interpretation and alignment with existing research. Broad, uncontroversial claims can be made. For example, new participants in P2 all maintained a working game thus able to share during each session.
 
 <!-- NOTE
 MOVE? NEXT CHAPTER - ALSO NOT ALL PROGRESSED
@@ -1318,6 +1299,21 @@ There is a connection in this process to foundational theories in the area of HC
 Affordances within the domain of HCI research
 
 The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.
+
+#### Inactivity illuminating the play paradox
+
+My progress in this study would have been more direct if I had not attempted to resolve the conflict between the informal choice and curriculum alignment.
+
+<!-- has been is helpful to provide a clearer the focus of this study on the possibilities of informal spaces. - >
+<!-- I also de-prioritised learning maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, -->
+<!-- and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods) -->
+
+This reflection was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned. The 'play paradox' explored above, which can create tensions around project work was lessened by the home education context.
+
+Despite this, the niggling feeling, it looks like fun but are they learning, remained. This feeling fed my concerns surrounding the validity of the experience and driving alignment to abstract content, stemmed from wider concerns around avoiding danger of tacit learning by reinforcing learning and spur metacognition. In retrospect, analysis of the wider learning experience shows that such opportunities did exist via social processes. This theme is explored in more detail in chapter six.
+
+IS THIS NEEDED / IN THE RIGHT PLACE?
+The process of researching conceptions of agency has allowed me to align my intuitive reluctance to steer participants towards the more abstract curricular concepts to interpretations of agency. In particular, Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals resonates.
 
 ### Link to next chapter
 
