--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -767,7 +767,7 @@ While tensions between lack of knowledge in how to undertake activities are comm
 One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
 
 While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools.
-CLARIFY AND AND SIGNPOST TO WHY NOT SCRATCH 
+CLARIFY AND AND SIGNPOST TO WHY NOT SCRATCH
 
 My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
 
@@ -972,6 +972,8 @@ For larger groups this was not optimal, leaving some learners confused and unsup
 ![](./Pictures/quickstart_phaser_1.png){width=50%}
 4.x - Example of a Quick start card
 
+CHANGE THIS TO A LANDSCAPE CARD?
+
 The rationale aligns with the core motivations of UMC technique, to build familiarity with the code structure, and confidence in use of tools in an accelerated way. Also the larger change in the game play experience are motivating [find source], a concept that aligns with the concept of good feedback in HCI literature [find source].  
 
 
@@ -980,6 +982,8 @@ The rationale aligns with the core motivations of UMC technique, to build famili
 The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
 
 #### Observations on design behaviours encouraged through use of game template
+
+INCLUDE THE AT LANGUAGE
 
 The initial use of a template was an intuitive response based on my own experience of teaching technology. However, as the template evolved, I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.
 
