--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -753,13 +753,17 @@ Examples include;
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
 
-## 3. Participant conflict due to lack of access and familiarity to tools
+## 3. Participant conflict due to lack of access and familiarity to tools and processes
 
 **Nature of conflict - unfamiliarity with tools- complexity of processes leading to frustration**
 
-This conflict, which surfaced in P1, was a  conflation of various tension which stemmed from lack of computer coding ability and lack of access to relevant tools.
+This conflict, which surfaced in P1, was a conflation of various tension which stemmed from lack familiarity with coding and game making tools and practices. While, such tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through instruction, the informal nature of this learning setting made such approaches unappealing. I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
 
-While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
+The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools.
+
+The crux of the tension involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within the designed environment to facilitate participants to address gaps in their knowledge without needing explicit instruction. The following sections explore the evolution of the tool selection and the tool use of participants in response to this conflict in the game making activity system.
+
+ <!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
 
 
 ### Motivations around in choice of toolset
@@ -777,13 +781,11 @@ My motivation for choice of code language (Javascript, Phaser) was driven by des
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
 
-### Code playground (as IDE?)
+### Addressing complexity of code environment through the use of a code playground
 
-This section outlines the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement.
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. Using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server.
 
-#### Addressing complexity of code environment with code playground
-
-In terms of technical complexity, using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of how they were interlinked.
+While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
 
 In journal notes and in video data I observed participants developing responses to immediate barriers that the new tool introduced.
 
