On 3. tension - tidying and clarifying

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -771,7 +771,12 @@ The crux of the tension involved designing a bespoke  game authoring environment
 One motivation was to align to authentic web technology due to my previous experience. The reason for working with code this authentic bears exploration. Characteristics of broader dimensions of authenticity of tools and processes in learning environments are explored in the literature review. A brief summary being: similarity to workplace settings; facilitating activity which serves a need of participants; an ability to showcased resulting work to an audience. FIND CITATION PBL?
 
 While my choice of open source digital tools allowed for a high level of aligning with professional practices, it was also potentially complex in terms of use of tools.
-CLARIFY AND AND SIGNPOST TO WHY NOT SCRATCH
+
+
+
+<!-- As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch.  -->
+
+A common question for this research is why not use Scratch (see LR / Glossary)? While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set.  
 
 My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
 
@@ -781,34 +786,52 @@ My motivation for choice of code language (Javascript, Phaser) was driven by des
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
 
 
-### Addressing complexity of code environment through the use of a code playground
+### Comparative observations on the use of a code playground
 
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. Using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server.
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users.
 
-While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
+While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools.
+NOTE - WHY IS THIS USEFUL?
 
-In journal notes and in video data I observed participants developing responses to immediate barriers that the new tool introduced.
 
- - Issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
- - Code syntax errors (GL) highlighted via a red dot provided a quick visual indication of where the error occurred. In pair work the non-coding peer would often notice and point out the red dot, thus preventing further errors.
- -
+**Complexity of set up**
+
+Using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the game code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of understanding how they were interlinked.
+
+Scratch has many things set up by default, a default screen size, asset creation tools, online community, comments and friend section.  
+
+
+**Addressing code syntax errors**
+
+Code syntax errors (GL) highlighted via a red dot provided a quick visual indication of where the error occurred. In pair work the non-coding peer would often notice and point out the red dot, thus preventing further errors.
+
+**Addressing access errors**
+
+In my design, issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
+CR Scratch.
+
+**Inspiring creativity**
+
+Scratch has an online community inspiring sharing and remixing. While my design used Glitch community, which had this capacity, the use was much broader, and Glitch less useful. Thus my design was lacking.  
+
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
-##### Why not Scratch? - differences in terms of tool set
-
-As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch. While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well researched and partly to prioritise authenticity of tool set despite the removal of certain technical barriers offered by such a self-contained tools set.  
 
 <!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
 <!-- #### Creation and migration of graphical and audio assets. -->
 
+**Distributed vs. self-contained approaches to asset creation**
+
+
 In P1, I used a variety of graphical and audio tools including:  Piskel to create sprite characters; Scratch to create backgrounds; Audacity and freesound.org record and edit audio for effects; Sonic Pi for background music; and Bxr online tool for sound effects. Participants would then save assets in a compatible format, upload them to the code playground, and link the file using a line of code.
 
-In Scatch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data. However, to justify this choice, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty involved.
+In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data. However, to justify this choice, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty involved.
 
 <!-- The difference in friction to adding assets is significant and the possibilities for it to go wrong also great.  -->
 
 To find middle ground, in P2 and P3 I reduced the number of tools suggested when creating assets. The implications of working in this more porous learning space are explored in the later discussion section.
+
 
 <!-- I began by mirroring social model of learning like CoL and CoP and their propose apprenticeship-based approaches. Specifically, introducing possible code solutions to implement the ideas of participants. However, limits to my time involvement and my technical fluency hindered this process creating stress in myself and frustration and hesitancy on participants to get direct help.
 
@@ -850,16 +873,18 @@ The a game template served to remove technical barriers to getting immediate fee
 
 ### Design choices of the half-baked template
 
-In participant feedback for P1, one parent indicated that it took too long before in the planning stage
-and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
+The examples above align with constructionist design principles used by the Scratch design team. An relevant design heuristic is - "Be careful about the use of black boxes" FIND SOURCE. This refers to the process of hiding away aspects or functionality of the code or processes. For example, in Scratch the process of setting up a canvas is preset. It is already present and visible on the creation of each new project and the user has no choice over the settings.
+
+In my design, I have made similar decisions to shield participants from unwelcome complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to deprioritise the impact of the underlying code complexity on the participants experience.
+
+In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
+
+The choice to use a starter template was driven by early experience in the experimental period of the design. In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
 
 Other parents requested additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach. In addition, my own motivations to explore research claims which on the engagement value of prioritising modifications to for quick impact on the game and on allowing participants choose over what they wanted to add to their game next.
 
-To address confusion about how to being coding a game, I introduced a working code example as a starter game template using the phaser library.
+To address confusion about how to being coding a game, I introduced a working code example as a starter game template using the phaser library. The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website to create a two-dimensional platformer game[^1]. I adapted the final game, removing out code with a focus on simplifying the structure and readability.
 
-The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website to create a two-dimensional platformer game[^1]. I adapted the final game, removing out code with a focus on simplifying the structure and readability.
-
-In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
 The template in this case followed the following structure:
 - a beginning section out side of a function declaring variables
