--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -908,8 +908,6 @@ In a redesign of the starting code template at the end of P1, following the UMC 
 
 <!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
 
-
-
 <!-- In phase one, I noted that any addition to the game in terms of adding new any quantity of code created many potential coding, conceptual and organisational challenges. To counter this I adapted the starting game template to allow changes in code were relatively easy to perform but which resulted in potentially large changes in game behaviour and appearance. -->
 
 <!-- NOTE SOME OF THIS CAN  -->
@@ -939,31 +937,24 @@ A later discussion section in this chapter illustrates a more complex interactio
 <!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
 -->
 
-#### Design affordances included in the game template
 
-This section draws on HCI theory and in particular the concept of affordances.
+#### Key Design affordances included in the game template
 
-While the focus on this chapter is on design and designs decisions, the following sections include brief analysis of the impact of them. BECAUSE
-Fuller analysis follows in chapters five and six.
-
-In the design of the template and in testing at the end of P1, I began to identify simple changes to the code that could provoke a high impact on the game experiences. The next sections describe and analyse these changes using affordance theory.
+Beyond the use of a structural template, I introduced design elements which highlighted code which altered easily recognisable game experience features in a way which aligned with research on the potential of half-baked games to structure game making. In the design of the template and in testing at the end of P1, I began to identify simple changes to the code that could provoke a high impact on the game experiences. This section explores these designs decisions with brief analysis of the impact of them. Fuller analysis follows in chapters five and six. To help structure this initial analysis, I draw on HCI theory and in particular the concept of affordances.
 
 <!-- list of changes
 background colour of the game
 game layout of the platforms - hazards and food to collect. -->
 
-
 **Variable editing for player movement**
 
-These include changing gravity, altering the player speed,
+I brought certain variables that had high impact on the game experiences to the very start of the code and named them carefully to highlight the link with the game players experience. These include changing gravity, altering the player jump height and walking speed.
 
-I brought certain variables that had high impact on the game experiences to the very start of the code.
+EXAMPLE VIA ILLUSTRATION - side by side.
 
-EXAMPLE VIA ILLUSTRATION
+The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code.
 
-The starting template began with the game in a broken state. Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code.
-
-Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
 **Level design and prototyping**
 
